# dialekt-portfolio

./: Cargo.toml  Trunk.toml  index.html  package-lock.json  tailwind.config.js
css/: tailwind.css
docs/: index.html  portfolio-dialekt-leptos-864683fbf34940f9.js  portfolio-dialekt-leptos-864683fbf34940f9_bg.wasm  portfolio-dialekt-leptos-c87cbb8ce115573d.js  portfolio-dialekt-leptos-c87cbb8ce115573d_bg.wasm  portfolio-dialekt-leptos-fef26a3dd61afe13.js  portfolio-dialekt-leptos-fef26a3dd61afe13_bg.wasm  tailwind-c3878c4231b2a54e.css
src/: bio.rs  input.css  main.rs  portfolio.rs  project.rs
src/project/: neod.rs
