[package]
name = "portfolio-dialekt-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
leptos = "0.2.5"
leptos_router = { version = "0.2.5", features = ["csr"] }
rand = { version = "0.8.5", features = ["nightly"] }
